--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -10,12 +10,19 @@
         }
         body {
             height: 100vh;
+            margin: 10px;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-repeat: no-repeat;
             background-position: center center;
-            margin: 10px;
             background-size: cover;
+            background-attachment: fixed;
+            /* 
+            shorthand background
+            color image position repeat size* attachment
+
+            *size: apesar de estar nas regras w3c, alguns navegadores podem não ter suporte ainda. 
+            */
         }
         main {
             background-color: white;
@@ -32,7 +39,28 @@
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, a. Eligendi possimus ullam repellendus, inventore atque fugit, ut dolor vitae voluptatum eaque quos delectus officia dicta officiis repudiandae ea sunt?
         Vitae, voluptatibus harum necessitatibus repudiandae ducimus, corporis dolorem rerum nihil officiis incidunt assumenda ut! Excepturi assumenda quisquam ab temporibus, nulla labore hic accusantium obcaecati cumque amet voluptates minima nesciunt reiciendis.
-        Earum fugit sed vero, exercitationem suscipit hic facere. Quidem, a alias cupiditate quae temporibus inventore sunt aperiam mollitia assumenda, dolorum eligendi ex accusantium corporis voluptatem asperiores reiciendis autem, aliquam officiis?</p>
+        Earum fugit sed vero, exercitationem suscipit hic facere. Quidem, a alias cupiditate quae temporibus inventore sunt aperiam mollitia assumenda, dolorum eligendi ex accusantium corporis voluptatem asperiores reiciendis autem, aliquam officiis?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea saepe rem tenetur soluta sapiente delectus eos dolor, harum, autem sed voluptatibus molestiae facilis aspernatur dolores vitae quas, voluptatum aliquam iure?
+        Ratione, dolorum. Iure, tenetur eaque exercitationem nam porro distinctio vitae quod vel, aut officiis aperiam laudantium iusto fugiat maxime adipisci reprehenderit quos perferendis corrupti explicabo? Recusandae atque voluptatum quaerat error?
+        Molestiae, recusandae. Sequi excepturi cumque molestias dolorem alias. Quis harum ad ex obcaecati! Vel debitis, fuga delectus nulla hic illo provident eum odit quibusdam quam voluptatibus quasi voluptate nesciunt nisi.
+        Quis quos esse maxime, commodi recusandae ullam eveniet voluptatem molestias sequi perferendis saepe deserunt laborum error expedita placeat harum fugit fuga aspernatur eos ut consequatur odio natus. Enim, molestiae aut?
+        Architecto quibusdam odio atque, temporibus optio soluta commodi eligendi modi officia fuga, praesentium, doloremque possimus! Architecto, aspernatur odit! Eius dolor iure recusandae eaque, deleniti doloremque sint fuga minus ab nam?
+        Ex sunt repellat vitae consequatur amet ullam aspernatur odio, sed, eius obcaecati unde, veritatis quos esse illum voluptatum. Nemo est ex esse hic alias impedit enim inventore amet quae itaque.
+        Fuga a nostrum in, sapiente inventore totam nisi debitis deserunt natus dolorum eius, magnam cum est minus culpa id, quas reprehenderit odio officiis maxime eaque perferendis necessitatibus rerum! Tempora, temporibus?
+        Error est vel nisi aliquam voluptatibus quia repellendus sunt tempore. Numquam nobis voluptas eligendi rerum culpa placeat quis ex soluta minima, quos, facilis quae nemo doloremque cum magni id qui.
+        Dolores, magni fugiat? Error quis laudantium tenetur optio quos, accusamus vero asperiores ducimus odit ipsa, at in dolor vitae cumque est quod minus ut voluptatem animi delectus ea. Nostrum, cupiditate!
+        Quaerat ipsum, vel voluptas similique hic aliquam voluptates dolorem inventore cupiditate accusamus laboriosam iusto a? Dignissimos assumenda enim, omnis vero fuga quasi perferendis rem et eligendi, molestiae in eos quis.
+        Earum amet quod perferendis a consectetur eum vero nemo repellendus ea soluta veniam unde quisquam, laudantium, obcaecati deleniti, incidunt pariatur hic magni. Perferendis laboriosam animi eaque facere exercitationem aut aperiam?
+        Dignissimos voluptate velit facere minus mollitia consequuntur quis dolore. Eaque ea maxime consequatur mollitia autem fuga iusto expedita incidunt, doloribus velit dolor labore minus enim odit adipisci. Aliquam, officiis? Quia.
+        Labore ipsa vel ullam ea saepe quos cum quaerat voluptatum veniam cumque cupiditate enim voluptas, totam, perspiciatis eum sed iure rem earum odit iste tempora animi. Quidem itaque a fugit.
+        Consectetur maxime, necessitatibus aliquid tempore voluptatem, vel iusto aut a nam omnis beatae laudantium quaerat repudiandae repellendus quo at tenetur voluptatum neque nesciunt deserunt asperiores voluptate! Nam dignissimos saepe a.
+        Sed, perspiciatis quasi impedit neque odit at? Explicabo voluptatibus ab, quam ea facilis perferendis odit tempora dolorum ducimus dignissimos eaque quidem quae hic officia modi. Nisi atque officia pariatur quas.
+        Suscipit enim impedit voluptates numquam commodi optio cumque inventore, pariatur quos placeat autem repellat, maxime laboriosam exercitationem iusto! Repellendus quae aspernatur reprehenderit optio eveniet voluptatem, nihil excepturi. Quo, hic sequi.
+        Sapiente, blanditiis! Odio deleniti vel incidunt a velit sapiente magnam natus. Saepe, optio voluptas. Fuga eius veniam qui officiis delectus rerum quisquam consectetur tempora aliquid? Praesentium voluptatum accusamus repellendus sed.
+        Similique voluptates necessitatibus, quaerat error, neque ducimus, officiis voluptas aliquam nobis id tenetur veniam itaque quibusdam! Temporibus reiciendis, excepturi molestiae iusto labore placeat perferendis illo inventore quia repudiandae molestias. Voluptatem.
+        Reiciendis numquam adipisci itaque delectus, ducimus consequuntur? Officiis ab unde et vero, veniam fuga mollitia impedit magnam odit perferendis est ipsam nam nobis, amet tenetur, quibusdam quaerat non nulla aliquam.
+        Voluptate, delectus quo sit ullam possimus similique nobis necessitatibus vero nemo quibusdam quae exercitationem impedit totam! Itaque quod quasi tenetur, deserunt, illo, sunt ratione commodi deleniti fuga odio molestiae consequatur?
+        Adipisci, illo unde eaque architecto sint, minus facere molestias ex nam ipsam doloribus ipsa voluptas modi est optio totam quae. Quod maiores tempora, alias consequatur nobis tempore obcaecati veniam iste?</p>
     </main>
 </body>
 </html>
