--- a/desafios/d011/index.html
+++ b/desafios/d011/index.html
@@ -11,12 +11,18 @@
         div#espaco {
             background-image: url('imagens/espaco.jpg');
             background-size: cover;
+            background-position: center center;
             height: 100vh;
             width: 100vw;
         }
         div#astronauta {
+            position: absolute;
             background-image: url('imagens/astronauta.png');  
-            background-position: absolute;
+            background-position: center center;
+            background-repeat: no-repeat;
+
+            height: 100%;
+            width: 100%;
 
             left:50%;
             top:50%;
