--- a/exercicios/ex026/mq002/index.html
+++ b/exercicios/ex026/mq002/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/retrato.css" media="screen and (orientation: portrait")>
+    <link rel="stylesheet" href="estilos/paisagem.css" media="screen and (orientation: landscape")>
     <link rel="stylesheet" href="estilos/style.css" media="all">
-    <link rel="stylesheet" href="estilos/retrato.css" media="screen" and (orientation: portrait)>
-    <link rel="stylesheet" href="estilos/paisagem.css" media="screen" and (orientation:landscape)>
+    <!-- a ordem é exercutada de cima pra baixo, então deixar as configs gerais por último para não serem sobrescritas -->
 </head>
 <body>
     <h1>Mude a Orientação do seu dispotivo</h1>
