--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
+<!-- Primeiro Contanto com Mobile First -->
 <body>
-    
+    <main>
+        <h1>Testando media queries</h1>
+        <img id="phone" src="imagens/icon-phone.png" alt="smartphone">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="tablet">
+        <img id="printer" src="imagens/icon-print.png" alt="impressora">
+        <img id="desktop" src="imagens/icon-pc.png" alt="desktop">
+        <img id="tv" src="imagens/icon-tv.png" alt="TV">
+    </main>
 </body>
 </html>
