--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -10,7 +10,7 @@
 <!-- Primeiro Contanto com Mobile First -->
 <body>
     <main>
-        <h1>Testando media queries</h1>
+        <h1>Testando Media Queries</h1>
         <img id="phone" src="imagens/icon-phone.png" alt="smartphone">
         <img id="tablet" src="imagens/icon-tablet.png" alt="tablet">
         <img id="printer" src="imagens/icon-print.png" alt="impressora">
