ex026 mq005 update

--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Site</title>
     <link rel="stylesheet" href="style.css">        
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <span class="material-symbols-outlined" id="burger" onclick="clickMenu()">
+            menu
+            </span>
+        <menu id="lista">
             <ul>
                 <li><a href="#">Opção 1 </a></li>
                 <li><a href="#">Opção 2 </a></li>
@@ -43,5 +47,15 @@
         Expedita suscipit voluptatum assumenda quidem ut provident. Provident quidem consectetur cum ab molestias magnam ipsa enim vel! Deserunt officia hic neque totam fuga beatae accusantium eos. Iste veritatis debitis tenetur.</p>
 </article>
 </main>
+<script>
+    function clickMenu() {
+       if (lista.style.display == 'block') {
+        lista.style.display = 'none'
+       }
+       else {
+        lista.style.display = 'block'
+       }
+    }
+</script>
 </body>
 </html>
