--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Site</title>
     <link rel="stylesheet" href="style.css">        
+    <link rel="stylesheet" href="media-query.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
-<body>
+<body onresize="mudouTamanho">
     <header>
         <h1>Meu Site</h1>
         <span class="material-symbols-outlined" id="burger" onclick="clickMenu()">
@@ -55,6 +56,17 @@
        else {
         lista.style.display = 'block'
        }
+    }
+
+
+
+    function mudouTamanho() {
+        if (window.innerWidth >= 768) {
+            lista.style.display = 'block'
+        }
+        else {
+            lista.style.display = 'none '
+        }
     }
 </script>
 </body>
